--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -28,6 +28,11 @@ h1 {
   color: rgba(175, 47, 47, 0.15);
   margin: 0;
 }
+h2 {
+  font-size: 55px;
+  color: rgba(175, 47, 47, 0.15);
+  margin: 0;
+}
 
 .todo-list {
   background: white;
@@ -57,6 +62,15 @@ li {
   padding: 16px;
   border-bottom: 1px solid #ededed;
   font-size: 24px;
+  justify-content: space-between;
+  
+  display: flex;
+  justify-content: space-between;
+  align-items: center; /* Alinea verticalmente los elementos */
+  padding: 16px;
+  border-bottom: 1px solid #ededed;
+  font-size: 24px;
+  position: relative; 
 }
 
 .footer::after,
@@ -87,15 +101,7 @@ li {
   transform: translateY(-50%);
   cursor: pointer;
 }
-.todo-item {
-  display: flex;
-  justify-content: space-between;
-  align-items: center; /* Alinea verticalmente los elementos */
-  padding: 16px;
-  border-bottom: 1px solid #ededed;
-  font-size: 24px;
-  position: relative; /* Necesario para posicionar el icono */
-}
+
 
 .todo-text {
   flex-grow: 1; /* Permite que el texto ocupe el espacio disponible */
@@ -115,6 +121,11 @@ li {
   right: 10px;
   z-index: 1000;
 }
+
+.fa-exclamation-triangle{
+  size: 50*50px ;
+}
+
 
 /* footer */
 .logo {
