--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -140,6 +140,39 @@ li {
   size: 50*50px ;
 }
 
+/* environments */
+
+.body-default {
+  background-color: white;
+  color:rgba(124, 15, 15, 0.15);
+}
+
+.body-improvements {
+  background-color: lightblue;
+  color: darkblue;
+}
+.body-testing,
+.body-testing input,
+.body-testing select
+{
+  background-color: #212529;
+  color: rgb(3, 255, 58);
+}
+
+.body-testing a,
+.body-testing h1,
+.body-testing h2,
+.body-testing h3,
+.body-testing input,
+.body-testing select {
+  color: rgb(3, 255, 58);
+}
+
+
+
+
+/* /fin/environments */
+
 
 /* footer */
 .logo {
